fix auth controller
